UtahLiveDataTest/src/objects/CommunityRegistrationConfig__c.object
<CustomObject>
    <description>[Framework] Defines the configuration for the Community registration</description>
    <fields>
        <fullName>HeaderText__c</fullName>
        <label>Header Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UseSingleAccountReg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Single Account Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserRegistration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Registration</label>
        <referenceTo>UserRegistration__c</referenceTo>
        <relationshipLabel>Community Registration Configs</relationshipLabel>
        <relationshipName>Community_Registration_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Reviewer</fullName>
                </value>
                <value>
                    <fullName>Ind Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Community Registration Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HeaderText__c</columns>
        <columns>UserRegistration__c</columns>
        <columns>UserType__c</columns>
        <columns>UseSingleAccountReg__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CRC-{0000}</displayFormat>
        <label>Community Registration Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Registration Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>